--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,24 +1,18 @@
-# Logs
-logs
-*.log
+# Common for all (admin, frontend, backend)
+
+# dependencies
+node_modules/
+.env
+
+# build
+dist/
+build/
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# editor
+.vscode/
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
